fix(integration_tests): fix test framework for python

--- a/integration_test/templates/functions/firebase.json.hbs
+++ b/integration_test/templates/functions/firebase.json.hbs
@@ -3,6 +3,7 @@
     {
       "source": "functions",
       "codebase": "default",
+      "runtime": "python311",
       "ignore": [
         "venv",
         ".venv",
@@ -11,8 +12,7 @@
         "*.pyc",
         ".git",
         "*.log"
-      ],
-      "runtime": "python311"
+      ]
     }
   ]
 }
