--- a/integration_test/templates/functions/src/v1/firestore_tests.py.hbs
+++ b/integration_test/templates/functions/src/v1/firestore_tests.py.hbs
@@ -5,7 +5,7 @@ Test Run ID: {{testRunId}}
 
 from firebase_admin import firestore
 from firebase_functions import firestore_fn
-from ..utils import sanitize_data
+from utils import sanitize_data
 
 REGION = "{{region}}"
 
