--- a/integration_test/templates/functions/src/v2/identity_tests.py.hbs
+++ b/integration_test/templates/functions/src/v2/identity_tests.py.hbs
@@ -14,7 +14,7 @@ REGION = "{{region}}"
     region=REGION,
     timeout_sec={{timeout}}
 )
-def {{name}}_{{../testRunId}}(event: identity_fn.AuthBlockingEvent) -> None:
+def {{name}}{{../testRunId}}(event: identity_fn.AuthBlockingEvent) -> None:
     """
     Test function: {{name}}
     Trigger: {{trigger}}
